secp256k1-sys/depend/secp256k1/include/secp256k1.h


typedef struct haskellsecp256k1_v0_1_0_context_struct haskellsecp256k1_v0_1_0_context;
typedef struct {
    unsigned char data[64];
} haskellsecp256k1_v0_1_0_pubkey;
typedef struct {
    unsigned char data[64];
} haskellsecp256k1_v0_1_0_ecdsa_signature;
typedef int (*haskellsecp256k1_v0_1_0_nonce_function)(
    unsigned char *nonce32,
    const unsigned char *msg32,
    const unsigned char *key32,
    const unsigned char *algo16,
    void *data,
    unsigned int attempt
);
#define SECP256K1_FLAGS_TYPE_CONTEXT (1 << 0)
#define SECP256K1_CONTEXT_NONE (SECP256K1_FLAGS_TYPE_CONTEXT)
SECP256K1_API haskellsecp256k1_v0_1_0_context *haskellsecp256k1_v0_1_0_context_create(
    unsigned int flags
) SECP256K1_WARN_UNUSED_RESULT;
SECP256K1_API void haskellsecp256k1_v0_1_0_context_destroy(
    haskellsecp256k1_v0_1_0_context *ctx
) SECP256K1_ARG_NONNULL(1);
SECP256K1_API int haskellsecp256k1_v0_1_0_ecdsa_signature_parse_der(
    const haskellsecp256k1_v0_1_0_context *ctx,
    haskellsecp256k1_v0_1_0_ecdsa_signature *sig,
    const unsigned char *input,
    size_t inputlen
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);
SECP256K1_API int haskellsecp256k1_v0_1_0_ecdsa_signature_serialize_der(
    const haskellsecp256k1_v0_1_0_context *ctx,
    unsigned char *output,
    size_t *outputlen,
    const haskellsecp256k1_v0_1_0_ecdsa_signature *sig
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3) SECP256K1_ARG_NONNULL(4);
SECP256K1_API int haskellsecp256k1_v0_1_0_ecdsa_signature_serialize_compact(
    const haskellsecp256k1_v0_1_0_context *ctx,
    unsigned char *output64,
    const haskellsecp256k1_v0_1_0_ecdsa_signature *sig
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int haskellsecp256k1_v0_1_0_ecdsa_verify(
    const haskellsecp256k1_v0_1_0_context *ctx,
    const haskellsecp256k1_v0_1_0_ecdsa_signature *sig,
    const unsigned char *msghash32,
    const haskellsecp256k1_v0_1_0_pubkey *pubkey
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3) SECP256K1_ARG_NONNULL(4);
SECP256K1_API int haskellsecp256k1_v0_1_0_ecdsa_signature_normalize(
    const haskellsecp256k1_v0_1_0_context *ctx,
    haskellsecp256k1_v0_1_0_ecdsa_signature *sigout,
    const haskellsecp256k1_v0_1_0_ecdsa_signature *sigin
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(3);
SECP256K1_API const haskellsecp256k1_v0_1_0_nonce_function haskellsecp256k1_v0_1_0_nonce_function_rfc6979;
SECP256K1_API const haskellsecp256k1_v0_1_0_nonce_function haskellsecp256k1_v0_1_0_nonce_function_default;
SECP256K1_API int haskellsecp256k1_v0_1_0_ecdsa_sign(
    const haskellsecp256k1_v0_1_0_context *ctx,
    haskellsecp256k1_v0_1_0_ecdsa_signature *sig,
    const unsigned char *msghash32,
    const unsigned char *seckey,
    haskellsecp256k1_v0_1_0_nonce_function noncefp,
    const void *ndata
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3) SECP256K1_ARG_NONNULL(4);
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int haskellsecp256k1_v0_1_0_context_randomize(
    haskellsecp256k1_v0_1_0_context *ctx,
    const unsigned char *seed32
) SECP256K1_ARG_NONNULL(1);