secp256k1-sys/lib/Crypto/Secp256k1/Internal.hs

{-# LANGUAGE CApiFFI #-}

module Crypto.Secp256k1.Internal (
  -- context
    Context
  , Seed32
  , secp256k1_context_create
  , secp256k1_context_destroy
  , secp256k1_context_randomize

  -- ecdsa
  , NonceFn
  , Nonce32
  , MsgHash32
  , PubKey64
  , SecKey32
  , Sig64
  , Algo16
  , secp256k1_nonce_function_rfc6979
  , secp256k1_nonce_function_default
  , secp256k1_ecdsa_verify
  , secp256k1_ecdsa_sign
  , secp256k1_ecdsa_signature_normalize
  , secp256k1_ecdsa_signature_parse_der
  , secp256k1_ecdsa_signature_serialize_der
  , secp256k1_ecdsa_signature_serialize_compact
  ) where

import Foreign.Ptr (Ptr)
import Foreign.C.Types (CUChar(..), CInt(..), CUInt(..), CSize(..))

data Context

-- 32-byte random seed
data Seed32

-- context

-- per secp256k1.h:
--
--  > The only valid non-deprecated flag in recent library versions is
--  > SECP256K1_CONTEXT_NONE, which will create a context sufficient for
--  > all functionality
--
-- where SECP256K1_CONTEXT_NONE = 1, via:
--
-- #define SECP256K1_FLAGS_TYPE_CONTEXT (1 << 0)
-- #define SECP256K1_CONTEXT_NONE (SECP256K1_FLAGS_TYPE_CONTEXT)
foreign import capi
  "secp256k1.h haskellsecp256k1_v0_1_0_context_create"
  secp256k1_context_create
    :: CUInt
    -> IO (Ptr Context)

foreign import capi
  "secp256k1.h haskellsecp256k1_v0_1_0_context_destroy"
  secp256k1_context_destroy
    :: Ptr Context
    -> IO ()

foreign import capi
  "secp256k1.h haskellsecp256k1_v0_1_0_context_randomize"
  secp256k1_context_randomize
    :: Ptr Context
    -> Ptr Seed32
    -> IO CInt

-- ecdsa

-- 32-byte array
data Nonce32

-- 32-byle message hash
data MsgHash32

-- 16-byte signature algorithm description
data Algo16

-- 64-byte signature
data Sig64

-- 64-byte public key
data PubKey64

-- 32-byte secret key
data SecKey32

-- 32-byte secret key
data Bytes64

-- deterministic nonce function
newtype NonceFn a = NonceFn (
     Ptr Nonce32
  -> Ptr MsgHash32
  -> Ptr SecKey32
  -> Ptr Algo16
  -> Ptr a
  -> CUInt
  -> IO CInt
  )

foreign import capi
  "secp256k1.h haskellsecp256k1_v0_1_0_nonce_function_rfc6979"
  secp256k1_nonce_function_rfc6979
    :: NonceFn a

foreign import capi
  "secp256k1.h haskellsecp256k1_v0_1_0_nonce_function_default"
  secp256k1_nonce_function_default
    :: NonceFn a

foreign import capi
  "secp256k1.h haskellsecp256k1_v0_1_0_ecdsa_verify"
  secp256k1_ecdsa_verify
    :: Ptr Context
    -> Ptr Sig64
    -> Ptr MsgHash32
    -> Ptr PubKey64
    -> IO CInt

foreign import capi
  "secp256k1.h haskellsecp256k1_v0_1_0_ecdsa_sign"
  secp256k1_ecdsa_sign
    :: Ptr Context
    -> Ptr Sig64
    -> Ptr MsgHash32
    -> Ptr SecKey32
    -> Ptr (NonceFn a) -- XX check
    -> Ptr b
    -> IO CInt

foreign import capi
  "secp256k1.h haskellsecp256k1_v0_1_0_ecdsa_signature_normalize"
  secp256k1_ecdsa_signature_normalize
    :: Ptr Context
    -> Ptr Sig64
    -> Ptr Sig64
    -> IO CInt

foreign import capi
  "secp256k1.h haskellsecp256k1_v0_1_0_ecdsa_signature_parse_der"
  secp256k1_ecdsa_signature_parse_der
    :: Ptr Context
    -> Ptr Sig64
    -> Ptr CUChar
    -> CSize
    -> IO CInt

foreign import capi
  "secp256k1.h haskellsecp256k1_v0_1_0_ecdsa_signature_serialize_der"
  secp256k1_ecdsa_signature_serialize_der
    :: Ptr Context
    -> Ptr CUChar
    -> Ptr CSize
    -> Ptr Sig64
    -> IO CInt

foreign import capi
  "secp256k1.h haskellsecp256k1_v0_1_0_ecdsa_signature_serialize_compact"
  secp256k1_ecdsa_signature_serialize_compact
    :: Ptr Context
    -> Ptr Bytes64
    -> Ptr Sig64
    -> IO CInt









-- XX ideally the context should be represented using a storable instance,
--    which would enable 'mallocForeignPtr', which apparently has a heavily
--    optimised implementation in GHC
-- newtype ForeignContext = ForeignContext (ForeignPtr Context)

-- create = bracket acquire release



-- createContext :: IO Ctx
-- createContext = do
--   ctx <- mask_ $ do
--     pctx <- contextCreate signVerify
--     Ctx <$> newForeignPtr contextDestroyFunPtr pctx
--   randomizeContext ctx
--   return ctx
--
-- cloneContext :: Ctx -> IO Ctx
-- cloneContext (Ctx fctx) =
--   withForeignPtr fctx $ \ctx -> mask_ $ do
--     ctx' <- contextClone ctx
--     Ctx <$> newForeignPtr contextDestroyFunPtr ctx'
--
-- destroyContext :: Ctx -> IO ()
-- destroyContext (Ctx fctx)= finalizeForeignPtr fctx

-- randomizeContext :: Ctx -> IO ()
-- randomizeContext (Ctx fctx) = withForeignPtr fctx $ \ctx -> do
--   ret <- withRandomSeed $ contextRandomize ctx
--   unless (isSuccess ret) $ error "Could not randomize context"










-- -- Hash function to use to post-process an ECDH point to get
-- -- a shared secret.
-- newtype EcdhHashFn a = EcdhHashFn (
--      Ptr CUChar
--   -> Ptr CUChar
--   -> Ptr CUChar
--   -> Ptr a
--   -> IO CInt
--   )
--
-- -- Same as secp256k1_nonce function with the exception of accepting an
-- -- additional pubkey argument and not requiring an attempt argument.
-- -- The pubkey argument can protect signature schemes with key-prefixed
-- -- challenge hash inputs against reusing the nonce when signing with the
-- -- wrong precomputed pubkey.
-- newtype SchnorrNonceFn a = SchnorrNonceFn (
--      Ptr CUChar
--   -> Ptr CUChar
--   -> CSize
--   -> Ptr CUChar
--   -> Ptr CUChar
--   -> Ptr CUChar
--   -> CSize
--   -> Ptr a
--   -> IO CInt
--   )
--
--
-- -- A hash function used by `ellswift_ecdh` to hash the final ECDH shared
-- -- secret.
-- newtype EllswiftEcdhHashFn a = EllswiftEcdhHashFn (
--      Ptr CUChar
--   -> Ptr CUChar
--   -> Ptr CUChar
--   -> Ptr CUChar
--   -> Ptr a
--   -> IO CInt
--   )
--
-- newtype EllswiftXdhHashFn a = EllswiftXdhHashFn (
--      Ptr CUChar
--   -> Ptr CUChar
--   -> Ptr CUChar
--   -> Ptr CUChar
--   -> Ptr a
--   -> IO CInt
--   )
--
-- -- Data structure that contains additional arguments for
-- -- schnorrsig_sign_custom.
-- data SchnorrSigExtraParams a =
--   SchnorrSigExtraParams
--     !BS.ByteString       -- magic
--     (SchnorrNonceFn a)  -- nonce_fp
--     (forall b. Ptr b)   -- ndata
--
-- -- Create a new SchnorrSigExtraParams properly initialized.
-- --
-- -- `nonce_fp`: pointer to a nonce generation function. If NULL
-- -- haskellsecp256k1_v0_5_0_nonce_function_bip340 is used
-- --
-- -- `ndata`: pointer to arbitrary data used by the nonce
-- -- generation function (can be NULL). If it is non-NULL and
-- -- haskellsecp256k1_v0_5_0_nonce_function_bip340 is used, then ndata
-- -- must be a pointer to 32-byte auxiliary randomness as per BIP-340.
-- new_SchnorrSigExtraParams
--   :: SchnorrNonceFn a
--   -> (forall b. Ptr b)
--   -> SchnorrSigExtraParams a
-- new_SchnorrSigExtraParams nonce_fp ndata =
--   let magic = BS.pack [0xda, 0x6f, 0xb3, 0x8c]
--   in  SchnorrSigExtraParams magic nonce_fp ndata
--
-- -- A Secp256k1 context, containing various precomputed values and
-- -- such needed to do elliptic curve computations.
-- newtype Context = Context CInt
--
-- -- Library-internal representation of a Secp256k1 public key
-- newtype PublicKey = PublicKey BS.ByteString
--
-- -- Library-internal representation of a Secp256k1 secret key (32-byte)
-- newtype SecretKey = SecretKey BS.ByteString
--
-- -- Library-internal representation of a Secp256k1 signature
-- newtype Signature = Signature BS.ByteString
--
-- newtype XOnlyPublicKey = XOnlyPublicKey BS.ByteString
--
-- newtype KeyPair = KeyPair BS.ByteString
--
-- -- Library-internal representation of a ElligatorSwift encoded group element.
-- newtype ElligatorSwift = ElligatorSwift BS.ByteString

